# bruhEngine

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE.bazel  output.txt
.cache/clangd/index/: bruhengine.c.2495CFFAEDB65E30.idx  glad.c.3A6A3AE19DAF59A2.idx  glad.c.97D8A42BD56743B1.idx  glad.h.3A94C849ECCDD7A9.idx  khrplatform.h.FB81618CBCF4056A.idx  main.cpp.4D6AE5CF554D5883.idx  window.cpp.463443742DB6FE7D.idx  window.hpp.CB18B9FD8DC52687.idx
include/: BUILD  glad.c  glad.h
include/glad/: glad.h
lib/: BUILD
src/: BUILD  glad.c  main.cpp  test.cpp
src/core/: BUILD  input.cpp  input.hpp  resource.cpp  resource.hpp
src/render/: BUILD  window.cpp  window.hpp
src/templates/: BUILD  singleton.hpp
